hphp/hack/test/typecheck/functional_anon_fun2.php.exp
File "functional_anon_fun2.php", line 21, characters 12-25:
The builtin `call_user_func` is deprecated. (Typing[4128])
